welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:2: error: not found: type boolean
    def hunt(): boolean = {
                ^